--- a/bisonmq/Cargo.toml
+++ b/bisonmq/Cargo.toml
@@ -3,5 +3,11 @@ name = "bisonmq"
 version = "0.1.0"
 edition = "2021"
 
+authors = [ "Leaf48" ]
+description = "A Lightweight and Simple Rust Library for Job Queue"
+repository = "https://github.com/Leaf48/BisonMQ"
+keywords = [ "queue", "background-jobs", "redis" ]
+license = "Apache"
+
 [dependencies]
 redis = "0.28.2"
