--- a/bisonmq/Cargo.toml
+++ b/bisonmq/Cargo.toml
@@ -7,7 +7,7 @@ authors = [ "Leaf48" ]
 description = "A Lightweight and Simple Rust Library for Job Queue"
 repository = "https://github.com/Leaf48/BisonMQ"
 keywords = [ "queue", "background-jobs", "redis" ]
-license = "Apache"
+license = "Apache-2.0"
 
 [dependencies]
 redis = "0.28.2"
