--- a/bisonmq/Cargo.toml
+++ b/bisonmq/Cargo.toml
@@ -12,4 +12,5 @@ readme = "../README.md"
 
 [dependencies]
 redis = { version = "0.28.2", features = ["tokio-comp"] }
+thiserror = "2.0.12"
 tokio = { version = "1.44.1", features = ["full"] }
